--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -33,10 +33,10 @@
 
   <!-- EXTERNAL TOOLS -->
   <!-- To not use the tool, change to a location that doesn't exist -->
-  <property name="app.ncover" value="..\..\lib\NCover\NCover.Console.exe" overwrite="false" />
-  <property name="app.ncover_explorer" value="..\..\lib\NCover\NCoverExplorer.Console.exe" overwrite="false" />
-  <property name="app.ncover.tester" value="..\..\lib\MbUnit2\MbUnit.Cons.exe" overwrite="false" />
-  <!--<property name="app.ncover.tester" value="..\..\lib\NUnit\nunit-console.exe" overwrite="false" />-->
+  <property name="app.ncover" value="..\..\no_exist\lib\NCover\NCover.Console.exe" overwrite="false" />
+  <property name="app.ncover_explorer" value="..\..\no_exist\lib\NCover\NCoverExplorer.Console.exe" overwrite="false" />
+  <!--<property name="app.ncover.tester" value="..\..\lib\MbUnit2\MbUnit.Cons.exe" overwrite="false" />-->
+  <property name="app.ncover.tester" value="..\..\no_exist\lib\NUnit\nunit-console.exe" overwrite="false" />
   <property name="app.ndepend" value="C:\Program Files\NDepend\NDepend.Console.exe" overwrite="false" />
 
   <!-- COMPILE VARIABLES -->
