--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -78,7 +78,6 @@
     <Compile Include="CommandLine\OneArgument.cs" />
     <Compile Include="CommandLine\TwoArguments.cs" />
     <Compile Include="CommandLine\Visualizer.cs" />
-    <Compile Include="Concurrency\Queue_Specs.cs" />
     <Compile Include="CrazySerializationIdea.cs" />
     <Compile Include="Cryptography\PublicKeyCrypto.cs" />
     <Compile Include="Cryptography\RijndaelCryptographyService_Specs.cs" />
@@ -87,8 +86,6 @@
     <Compile Include="DictionaryExtension_Specs.cs" />
     <Compile Include="Extensions\ExtensionsToInterfaces_Specs.cs" />
     <Compile Include="Linq\ExpressionHelpers_Specs.cs" />
-    <Compile Include="Linq\FileRepository.cs" />
-    <Compile Include="Linq\FlattenedObject_Specs.cs" />
     <Compile Include="Linq\Index_Specs.cs" />
     <Compile Include="Metrics\Counter_Specs.cs" />
     <Compile Include="Monads\WorkingMemoryParser_Specs.cs" />
@@ -119,11 +116,6 @@
     <Compile Include="Reflection\GenericTypeReflection_Specs.cs" />
     <Compile Include="Reflection\Generic_AdditionalSpecs.cs" />
     <Compile Include="Reflection\ObjectBuilder_Specs.cs" />
-    <Compile Include="Serialization\Parser.cs" />
-    <Compile Include="Serialization\PrimitiveType_Specs.cs" />
-    <Compile Include="Serialization\Result.cs" />
-    <Compile Include="Serialization\TestSubjects\PrimitiveClass.cs" />
-    <Compile Include="Serialization\XmlParser.cs" />
     <Compile Include="StateMachine\Anytime_Specs.cs" />
     <Compile Include="StateMachine\Combine_Specs.cs" />
     <Compile Include="StateMachine\EventException_Specs.cs" />
@@ -135,15 +127,9 @@
     <Compile Include="ObjectExtension_Specs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range_Specs.cs" />
-    <Compile Include="Reflection\CodeBuilder_Specs.cs" />
     <Compile Include="Reflection\Customer.cs" />
     <Compile Include="Reflection\FastCollection_Specs.cs" />
-    <Compile Include="Reflection\HandleRefType_Specs.cs" />
-    <Compile Include="Reflection\InterOp_Specs.cs" />
-    <Compile Include="Reflection\Performance_Specs.cs" />
-    <Compile Include="Reflection\PropertyType_Specs.cs" />
     <Compile Include="Reflection\Visibility_Specs.cs" />
-    <Compile Include="SerializationSpecificationBase.cs" />
     <Compile Include="Reflection_Specs.cs" />
     <Compile Include="Repository\Repository_Specs.cs" />
     <Compile Include="SpecificationBase.cs" />
@@ -172,6 +158,9 @@
     <Content Include="bob.pfx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Concurrency\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
