--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -157,6 +157,14 @@
     <Compile Include="Cryptography\EncryptedStream.cs" />
     <Compile Include="Cryptography\HashingService.cs" />
     <Compile Include="Cryptography\ICryptographyService.cs" />
+    <Compile Include="Cryptography\PKI\CryptoFunctions.cs" />
+    <Compile Include="Cryptography\PKI\IPkiCryptographyService.cs" />
+    <Compile Include="Cryptography\PKI\Key.cs" />
+    <Compile Include="Cryptography\PKI\KeyPair.cs" />
+    <Compile Include="Cryptography\PKI\KeyRing.cs" />
+    <Compile Include="Cryptography\PKI\KeyType.cs" />
+    <Compile Include="Cryptography\PKI\PrivateKey.cs" />
+    <Compile Include="Cryptography\PKI\PublicKeyGenerator.cs" />
     <Compile Include="Cryptography\RijndaelCryptographyService.cs" />
     <Compile Include="Cryptography\SHA1HashingService.cs" />
     <Compile Include="Cryptography\SHA512HashingService.cs" />
