--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Calendar\MemorialDayObservedCheck.cs" />
     <Compile Include="BehaviorTest.cs" />
     <Compile Include="Cryptography\DpapiCryptographyService_Specs.cs" />
+    <Compile Include="Cryptography\RsaCryptographyService_Specs.cs" />
     <Compile Include="Policies\ExceptionPolicy_Specs.cs" />
     <Compile Include="RangeParser_Specs.cs" />
     <Compile Include="EventStreamProcessing\MessagesToBeTestedWith.cs" />
