--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -67,6 +67,16 @@
     <Compile Include="BehaviorTest.cs" />
     <Compile Include="Cryptography\DpapiCryptographyService_Specs.cs" />
     <Compile Include="Cryptography\RsaCryptographyService_Specs.cs" />
+    <Compile Include="Generator\Classes\ClassWithDefaultConstructor.cs" />
+    <Compile Include="Generator\Classes\ClassWithMultipleConstructorArgs.cs" />
+    <Compile Include="Generator\Classes\ClassWithOneConstructorArg.cs" />
+    <Compile Include="Generator\Classes\ClassWithPrivateConstructor.cs" />
+    <Compile Include="Generator\Classes\ClassWithProtectedConstructor.cs" />
+    <Compile Include="Generator\Classes\ClassWithTwoConstructorArgs.cs" />
+    <Compile Include="Generator\ComplexConstructor_Specs.cs" />
+    <Compile Include="Generator\Generator_Specs.cs" />
+    <Compile Include="Generator\ObjectGeneratorImpl.cs" />
+    <Compile Include="Generator\Performance_Specs.cs" />
     <Compile Include="Policies\ExceptionPolicy_Specs.cs" />
     <Compile Include="RangeParser_Specs.cs" />
     <Compile Include="EventStreamProcessing\MessagesToBeTestedWith.cs" />
