--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -68,16 +68,24 @@
     <Compile Include="Cryptography\DpapiCryptographyService_Specs.cs" />
     <Compile Include="Cryptography\RsaCryptographyService_Specs.cs" />
     <Compile Include="Generator\Classes\ClassWithDefaultConstructor.cs" />
+    <Compile Include="Generator\Classes\ClassWithMultipleComplexConstructors.cs" />
     <Compile Include="Generator\Classes\ClassWithMultipleConstructorArgs.cs" />
     <Compile Include="Generator\Classes\ClassWithOneConstructorArg.cs" />
     <Compile Include="Generator\Classes\ClassWithPrivateConstructor.cs" />
     <Compile Include="Generator\Classes\ClassWithProtectedConstructor.cs" />
     <Compile Include="Generator\Classes\ClassWithTwoConstructorArgs.cs" />
+    <Compile Include="Generator\ComplexByType_Specs.cs" />
     <Compile Include="Generator\ComplexConstructor_Specs.cs" />
     <Compile Include="Generator\Generator_Specs.cs" />
-    <Compile Include="Generator\ObjectGeneratorImpl.cs" />
     <Compile Include="Generator\Performance_Specs.cs" />
     <Compile Include="Policies\ExceptionPolicy_Specs.cs" />
+    <Compile Include="CommandLineParser\EchoCommand.cs" />
+    <Compile Include="CommandLineParser\Executor_Specs.cs" />
+    <Compile Include="CommandLineParser\ICommand.cs" />
+    <Compile Include="CommandLineParser\MoveCommand.cs" />
+    <Compile Include="CommandLineParser\MoveCommandArguments.cs" />
+    <Compile Include="CommandLineParser\RequiredAttribute.cs" />
+    <Compile Include="CommandLineParser\VersionCommand.cs" />
     <Compile Include="RangeParser_Specs.cs" />
     <Compile Include="EventStreamProcessing\MessagesToBeTestedWith.cs" />
     <Compile Include="EventStreamProcessing\ObjectParser_specs.cs" />
