--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -176,6 +176,7 @@
     <Compile Include="EventStreamProcessing\PatternBasedObjectParser.cs" />
     <Compile Include="EventStreamProcessing\Result.cs" />
     <Compile Include="Generator\ExpressionExtensions.cs" />
+    <Compile Include="Generator\GenericObjectGenerator.cs" />
     <Compile Include="Generator\ObjectGenerator.cs" />
     <Compile Include="Generator\ObjectGeneratorBase.cs" />
     <Compile Include="Generator\ArgumentMatchingExtensions.cs" />
@@ -183,7 +184,8 @@
     <Compile Include="Generator\ObjectGenerator.2.cs" />
     <Compile Include="Generator\ObjectGenerator.3.cs" />
     <Compile Include="Generator\ObjectGenerator.1.cs" />
-    <Compile Include="Generator\ObjectGeneratorException.1.cs" />
+    <Compile Include="Generator\ObjectGeneratorException.cs" />
+    <Compile Include="Generator\TypeSpecializationExtensions.cs" />
     <Compile Include="Guard.cs" />
     <Compile Include="ILocalContext.cs" />
     <Compile Include="Data\IUnitOfWork.cs" />
