--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -67,6 +67,7 @@
     <Compile Include="BehaviorTest.cs" />
     <Compile Include="Cryptography\DpapiCryptographyService_Specs.cs" />
     <Compile Include="Cryptography\RsaCryptographyService_Specs.cs" />
+    <Compile Include="Generator\Classes\ClassWithAConstrainedGenericArgument.cs" />
     <Compile Include="Generator\Classes\ClassWithDefaultConstructor.cs" />
     <Compile Include="Generator\Classes\ClassWithMultipleComplexConstructors.cs" />
     <Compile Include="Generator\Classes\ClassWithMultipleConstructorArgs.cs" />
