--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -69,12 +69,15 @@
     <Compile Include="Cryptography\RsaCryptographyService_Specs.cs" />
     <Compile Include="Generator\Classes\ClassWithAConstrainedGenericArgument.cs" />
     <Compile Include="Generator\Classes\ClassWithDefaultConstructor.cs" />
+    <Compile Include="Generator\Classes\ClassWithGuidConstraint.cs" />
     <Compile Include="Generator\Classes\ClassWithMultipleComplexConstructors.cs" />
     <Compile Include="Generator\Classes\ClassWithMultipleConstructorArgs.cs" />
     <Compile Include="Generator\Classes\ClassWithOneConstructorArg.cs" />
     <Compile Include="Generator\Classes\ClassWithOneGenericArgument.cs" />
     <Compile Include="Generator\Classes\ClassWithPrivateConstructor.cs" />
     <Compile Include="Generator\Classes\ClassWithProtectedConstructor.cs" />
+    <Compile Include="Generator\Classes\ClassWithStringConstraint.cs" />
+    <Compile Include="Generator\Classes\ClassWithTwoConstrainedGenericArguments.cs" />
     <Compile Include="Generator\Classes\ClassWithTwoConstructorArgs.cs" />
     <Compile Include="Generator\ComplexByType_Specs.cs" />
     <Compile Include="Generator\ComplexConstructor_Specs.cs" />
