Renamed to FastActivator

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -176,15 +176,15 @@
     <Compile Include="EventStreamProcessing\PatternBasedObjectParser.cs" />
     <Compile Include="EventStreamProcessing\Result.cs" />
     <Compile Include="Generator\ExpressionExtensions.cs" />
-    <Compile Include="Generator\GenericObjectGenerator.cs" />
-    <Compile Include="Generator\ObjectGenerator.cs" />
-    <Compile Include="Generator\ObjectGeneratorBase.cs" />
+    <Compile Include="Generator\GenericFastActivator.cs" />
+    <Compile Include="Generator\FastActivator.cs" />
+    <Compile Include="Generator\FastActivatorBase.cs" />
     <Compile Include="Generator\ArgumentMatchingExtensions.cs" />
-    <Compile Include="Generator\IObjectGenerator.cs" />
-    <Compile Include="Generator\ObjectGenerator.2.cs" />
-    <Compile Include="Generator\ObjectGenerator.3.cs" />
-    <Compile Include="Generator\ObjectGenerator.1.cs" />
-    <Compile Include="Generator\ObjectGeneratorException.cs" />
+    <Compile Include="Generator\IFastActivator.cs" />
+    <Compile Include="Generator\FastActivator.2.cs" />
+    <Compile Include="Generator\FastActivator.3.cs" />
+    <Compile Include="Generator\FastActivator.1.cs" />
+    <Compile Include="Generator\FastActivatorException.cs" />
     <Compile Include="Generator\TypeSpecializationExtensions.cs" />
     <Compile Include="Guard.cs" />
     <Compile Include="ILocalContext.cs" />
