Moved to Activator namespace

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -175,17 +175,17 @@
     <Compile Include="EventStreamProcessing\Parser.cs" />
     <Compile Include="EventStreamProcessing\PatternBasedObjectParser.cs" />
     <Compile Include="EventStreamProcessing\Result.cs" />
-    <Compile Include="Generator\ExpressionExtensions.cs" />
-    <Compile Include="Generator\GenericFastActivator.cs" />
-    <Compile Include="Generator\FastActivator.cs" />
-    <Compile Include="Generator\FastActivatorBase.cs" />
-    <Compile Include="Generator\ArgumentMatchingExtensions.cs" />
-    <Compile Include="Generator\IFastActivator.cs" />
-    <Compile Include="Generator\FastActivator.2.cs" />
-    <Compile Include="Generator\FastActivator.3.cs" />
-    <Compile Include="Generator\FastActivator.1.cs" />
-    <Compile Include="Generator\FastActivatorException.cs" />
-    <Compile Include="Generator\TypeSpecializationExtensions.cs" />
+    <Compile Include="Activator\ExpressionExtensions.cs" />
+    <Compile Include="Activator\GenericFastActivator.cs" />
+    <Compile Include="Activator\FastActivator.cs" />
+    <Compile Include="Activator\FastActivatorBase.cs" />
+    <Compile Include="Activator\ArgumentMatchingExtensions.cs" />
+    <Compile Include="Activator\IFastActivator.cs" />
+    <Compile Include="Activator\FastActivator.2.cs" />
+    <Compile Include="Activator\FastActivator.3.cs" />
+    <Compile Include="Activator\FastActivator.1.cs" />
+    <Compile Include="Activator\FastActivatorException.cs" />
+    <Compile Include="Activator\TypeSpecializationExtensions.cs" />
     <Compile Include="Guard.cs" />
     <Compile Include="ILocalContext.cs" />
     <Compile Include="Data\IUnitOfWork.cs" />
