--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -67,24 +67,24 @@
     <Compile Include="BehaviorTest.cs" />
     <Compile Include="Cryptography\DpapiCryptographyService_Specs.cs" />
     <Compile Include="Cryptography\RsaCryptographyService_Specs.cs" />
-    <Compile Include="Generator\Classes\ClassWithAConstrainedGenericArgument.cs" />
-    <Compile Include="Generator\Classes\ClassWithDefaultConstructor.cs" />
-    <Compile Include="Generator\Classes\ClassWithGuidConstraint.cs" />
-    <Compile Include="Generator\Classes\ClassWithMultipleComplexConstructors.cs" />
-    <Compile Include="Generator\Classes\ClassWithMultipleConstructorArgs.cs" />
-    <Compile Include="Generator\Classes\ClassWithOneConstructorArg.cs" />
-    <Compile Include="Generator\Classes\ClassWithOneGenericArgument.cs" />
-    <Compile Include="Generator\Classes\ClassWithPrivateConstructor.cs" />
-    <Compile Include="Generator\Classes\ClassWithProtectedConstructor.cs" />
-    <Compile Include="Generator\Classes\ClassWithStringConstraint.cs" />
-    <Compile Include="Generator\Classes\ClassWithTwoConstrainedGenericArguments.cs" />
-    <Compile Include="Generator\Classes\ClassWithTwoConstructorArgs.cs" />
-    <Compile Include="Generator\ComplexByType_Specs.cs" />
-    <Compile Include="Generator\ComplexConstructor_Specs.cs" />
-    <Compile Include="Generator\Generator_Specs.cs" />
-    <Compile Include="Generator\GenericType_Specs.cs" />
-    <Compile Include="Generator\Matching_Specs.cs" />
-    <Compile Include="Generator\Performance_Specs.cs" />
+    <Compile Include="Activator\Classes\ClassWithAConstrainedGenericArgument.cs" />
+    <Compile Include="Activator\Classes\ClassWithDefaultConstructor.cs" />
+    <Compile Include="Activator\Classes\ClassWithGuidConstraint.cs" />
+    <Compile Include="Activator\Classes\ClassWithMultipleComplexConstructors.cs" />
+    <Compile Include="Activator\Classes\ClassWithMultipleConstructorArgs.cs" />
+    <Compile Include="Activator\Classes\ClassWithOneConstructorArg.cs" />
+    <Compile Include="Activator\Classes\ClassWithOneGenericArgument.cs" />
+    <Compile Include="Activator\Classes\ClassWithPrivateConstructor.cs" />
+    <Compile Include="Activator\Classes\ClassWithProtectedConstructor.cs" />
+    <Compile Include="Activator\Classes\ClassWithStringConstraint.cs" />
+    <Compile Include="Activator\Classes\ClassWithTwoConstrainedGenericArguments.cs" />
+    <Compile Include="Activator\Classes\ClassWithTwoConstructorArgs.cs" />
+    <Compile Include="Activator\ComplexByType_Specs.cs" />
+    <Compile Include="Activator\ComplexConstructor_Specs.cs" />
+    <Compile Include="Activator\Generator_Specs.cs" />
+    <Compile Include="Activator\GenericType_Specs.cs" />
+    <Compile Include="Activator\Matching_Specs.cs" />
+    <Compile Include="Activator\Performance_Specs.cs" />
     <Compile Include="Policies\ExceptionPolicy_Specs.cs" />
     <Compile Include="CommandLineParser\EchoCommand.cs" />
     <Compile Include="CommandLineParser\Executor_Specs.cs" />
