--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -190,8 +190,10 @@
     <Compile Include="ILocalContext.cs" />
     <Compile Include="Data\IUnitOfWork.cs" />
     <Compile Include="InterfaceExtensions\ExtensionsToInterfaces.cs" />
-    <Compile Include="Invoker\FastInvoker.cs" />
+    <Compile Include="Invoker\FastInvoker.1.cs" />
+    <Compile Include="Invoker\FastInvokerBase.cs" />
     <Compile Include="Invoker\FastInvokerExtensions.cs" />
+    <Compile Include="Invoker\FastInvoker.2.cs" />
     <Compile Include="Invoker\IFastInvoker.cs" />
     <Compile Include="Linq\Batch.cs" />
     <Compile Include="Linq\Index.cs" />
