--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -175,26 +175,26 @@
     <Compile Include="EventStreamProcessing\Parser.cs" />
     <Compile Include="EventStreamProcessing\PatternBasedObjectParser.cs" />
     <Compile Include="EventStreamProcessing\Result.cs" />
-    <Compile Include="Activator\ExpressionExtensions.cs" />
-    <Compile Include="Activator\GenericFastActivator.cs" />
-    <Compile Include="Activator\FastActivator.cs" />
-    <Compile Include="Activator\FastActivatorBase.cs" />
-    <Compile Include="Activator\ArgumentMatchingExtensions.cs" />
-    <Compile Include="Activator\IFastActivator.cs" />
-    <Compile Include="Activator\FastActivator.2.cs" />
-    <Compile Include="Activator\FastActivator.3.cs" />
-    <Compile Include="Activator\FastActivator.1.cs" />
-    <Compile Include="Activator\FastActivatorException.cs" />
-    <Compile Include="Activator\TypeSpecializationExtensions.cs" />
+    <Compile Include="Reflection\ExpressionExtensions.cs" />
+    <Compile Include="Reflection\GenericFastActivator.cs" />
+    <Compile Include="Reflection\FastActivator.cs" />
+    <Compile Include="Reflection\FastActivatorBase.cs" />
+    <Compile Include="Reflection\ArgumentMatchingExtensions.cs" />
+    <Compile Include="Reflection\IFastActivator.cs" />
+    <Compile Include="Reflection\FastActivator.2.cs" />
+    <Compile Include="Reflection\FastActivator.3.cs" />
+    <Compile Include="Reflection\FastActivator.1.cs" />
+    <Compile Include="Reflection\FastActivatorException.cs" />
+    <Compile Include="Reflection\TypeSpecializationExtensions.cs" />
     <Compile Include="Guard.cs" />
     <Compile Include="ILocalContext.cs" />
     <Compile Include="Data\IUnitOfWork.cs" />
     <Compile Include="InterfaceExtensions\ExtensionsToInterfaces.cs" />
-    <Compile Include="Invoker\FastInvoker.1.cs" />
-    <Compile Include="Invoker\FastInvokerBase.cs" />
-    <Compile Include="Invoker\FastInvokerExtensions.cs" />
-    <Compile Include="Invoker\FastInvoker.2.cs" />
-    <Compile Include="Invoker\IFastInvoker.cs" />
+    <Compile Include="Reflection\FastInvoker.1.cs" />
+    <Compile Include="Reflection\FastInvokerBase.cs" />
+    <Compile Include="Reflection\FastInvokerExtensions.cs" />
+    <Compile Include="Reflection\FastInvoker.2.cs" />
+    <Compile Include="Reflection\IFastInvoker.cs" />
     <Compile Include="Linq\Batch.cs" />
     <Compile Include="Linq\Index.cs" />
     <Compile Include="Linq\Merge.cs" />
@@ -331,6 +331,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Collections\A Note About This Folder.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Activator\" />
+    <Folder Include="Invoker\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
