A bunch of RulesEngine updates as we work towards a real implementation of an optimized rules engine

--- a/src/Magnum.RulesEngine.Specs/Magnum.RulesEngine.Specs.csproj
+++ b/src/Magnum.RulesEngine.Specs/Magnum.RulesEngine.Specs.csproj
@@ -51,7 +51,10 @@
     <Compile Include="Consequences\LogOrderDetails.cs" />
     <Compile Include="EnuemrableItems_Specs.cs" />
     <Compile Include="Events\OrderSubmitted.cs" />
+    <Compile Include="ExecutionModelTest\Engine_Specs.cs" />
     <Compile Include="ExecutionModelTest\ProcessingAnEvent_Specs.cs" />
+    <Compile Include="ExecutionModelTest\SingleInputNode_Specs.cs" />
+    <Compile Include="Expression_Specs.cs" />
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Consequences\HoldOrderForApproval.cs" />
     <Compile Include="Model\Order.cs" />
