--- a/src/Magnum.RulesEngine/Magnum.RulesEngine.csproj
+++ b/src/Magnum.RulesEngine/Magnum.RulesEngine.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ExecutionModel\NodeVisitor.cs" />
     <Compile Include="ExecutionModel\ProductionNode.cs" />
     <Compile Include="ExecutionModel\SelectManyNode.cs" />
+    <Compile Include="ExecutionModel\SingleInputNodeWithSuccessors.cs" />
     <Compile Include="ExecutionModel\SingleInputTreeNode.cs" />
     <Compile Include="ExecutionModel\ConsequenceNode.cs" />
     <Compile Include="ExecutionModel\Engine.cs" />
