--- a/src/Magnum.RulesEngine/Magnum.RulesEngine.csproj
+++ b/src/Magnum.RulesEngine/Magnum.RulesEngine.csproj
@@ -48,13 +48,21 @@
     <Compile Include="DSL\RuleConfigurator.cs" />
     <Compile Include="ExecutionModel\AbstractNode.cs" />
     <Compile Include="ExecutionModel\ActionConsequenceNode.cs" />
+    <Compile Include="ExecutionModel\ActionNode.cs" />
+    <Compile Include="ExecutionModel\BetaMemory.cs" />
+    <Compile Include="ExecutionModel\CompileExpressionException.cs" />
+    <Compile Include="ExecutionModel\Activatable.cs" />
     <Compile Include="ExecutionModel\Agenda.cs" />
     <Compile Include="ExecutionModel\AlphaNode.cs" />
     <Compile Include="ExecutionModel\AlphaMemoryActivation.cs" />
     <Compile Include="ExecutionModel\ConstantJoinNode.cs" />
+    <Compile Include="ExecutionModel\ExecutionModelException.cs" />
     <Compile Include="ExecutionModel\MultipleConditionNode.cs" />
     <Compile Include="ExecutionModel\NodeVisitor.cs" />
+    <Compile Include="ExecutionModel\PriorityActionQueue.cs" />
+    <Compile Include="ExecutionModel\PriorityQueueAgenda.cs" />
     <Compile Include="ExecutionModel\ProductionNode.cs" />
+    <Compile Include="RulesEngineException.cs" />
     <Compile Include="ExecutionModel\SelectManyNode.cs" />
     <Compile Include="ExecutionModel\SingleInputNodeWithSuccessors.cs" />
     <Compile Include="ExecutionModel\SingleInputTreeNode.cs" />
