--- a/src/Magnum.RulesEngine/Magnum.RulesEngine.csproj
+++ b/src/Magnum.RulesEngine/Magnum.RulesEngine.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ExecutionModel\Activatable.cs" />
     <Compile Include="ExecutionModel\Agenda.cs" />
     <Compile Include="ExecutionModel\AlphaNode.cs" />
+    <Compile Include="ExecutionModel\ConditionTree.cs" />
     <Compile Include="ExecutionModel\ConstantJoinNode.cs" />
     <Compile Include="ExecutionModel\ExecutionModelException.cs" />
     <Compile Include="ExecutionModel\LeafNode.cs" />
