--- a/src/Magnum.RulesEngine.Specs/Magnum.RulesEngine.Specs.csproj
+++ b/src/Magnum.RulesEngine.Specs/Magnum.RulesEngine.Specs.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Agenda Specs\Agenda_Specs.cs" />
     <Compile Include="Agenda Specs\BetaMemory_Specs.cs" />
+    <Compile Include="Agenda Specs\ContextAgenda_Specs.cs" />
     <Compile Include="Conditions\CustomerIsPreferred.cs" />
     <Compile Include="Consequences\LogOrderDetails.cs" />
     <Compile Include="EnuemrableItems_Specs.cs" />
