--- a/src/Magnum.RulesEngine/Magnum.RulesEngine.csproj
+++ b/src/Magnum.RulesEngine/Magnum.RulesEngine.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractModelVisitor.cs" />
     <Compile Include="Condition.cs" />
     <Compile Include="ConditionNormalizer.cs" />
     <Compile Include="Consequence.cs" />
@@ -46,24 +47,26 @@
     <Compile Include="DSL\ExitExtension.cs" />
     <Compile Include="DSL\Rule.cs" />
     <Compile Include="DSL\RuleConfigurator.cs" />
-    <Compile Include="ExecutionModel\AbstractNode.cs" />
+    <Compile Include="ExecutionModel\ModelVisitorSite.cs" />
+    <Compile Include="ModelVisitor.cs" />
     <Compile Include="ExecutionModel\ActionConsequenceNode.cs" />
     <Compile Include="ExecutionModel\ActionNode.cs" />
     <Compile Include="ExecutionModel\BetaMemory.cs" />
     <Compile Include="ExecutionModel\CompileExpressionException.cs" />
-    <Compile Include="ExecutionModel\Activatable.cs" />
+    <Compile Include="ExecutionModel\Activation.cs" />
     <Compile Include="ExecutionModel\Agenda.cs" />
     <Compile Include="ExecutionModel\AlphaNode.cs" />
-    <Compile Include="ExecutionModel\ConditionTree.cs" />
+    <Compile Include="ExecutionModel\ConditionTreeNode.cs" />
     <Compile Include="ExecutionModel\ConstantJoinNode.cs" />
     <Compile Include="ExecutionModel\ExecutionModelException.cs" />
-    <Compile Include="ExecutionModel\LeafNode.cs" />
+    <Compile Include="ExecutionModel\ConstantNode.cs" />
     <Compile Include="ExecutionModel\MemoryJunction.cs" />
     <Compile Include="ExecutionModel\MultipleConditionNode.cs" />
     <Compile Include="ExecutionModel\NodeVisitor.cs" />
     <Compile Include="ExecutionModel\PriorityActionQueue.cs" />
     <Compile Include="ExecutionModel\PriorityQueueAgenda.cs" />
     <Compile Include="ExecutionModel\ProductionNode.cs" />
+    <Compile Include="ExecutionModel\RightActivation.cs" />
     <Compile Include="ExecutionModel\SuccessorSet.cs" />
     <Compile Include="RulesEngineException.cs" />
     <Compile Include="ExecutionModel\SelectManyNode.cs" />
