--- a/src/Magnum.RulesEngine/Magnum.RulesEngine.csproj
+++ b/src/Magnum.RulesEngine/Magnum.RulesEngine.csproj
@@ -47,44 +47,31 @@
     <Compile Include="DSL\ExitExtension.cs" />
     <Compile Include="DSL\Rule.cs" />
     <Compile Include="DSL\RuleConfigurator.cs" />
+    <Compile Include="ExecutionModel\DeclarationCompiler.cs" />
     <Compile Include="ExecutionModel\ModelVisitorSite.cs" />
     <Compile Include="ModelVisitor.cs" />
-    <Compile Include="ExecutionModel\ActionConsequenceNode.cs" />
     <Compile Include="ExecutionModel\ActionNode.cs" />
     <Compile Include="ExecutionModel\BetaMemory.cs" />
-    <Compile Include="ExecutionModel\CompileExpressionException.cs" />
+    <Compile Include="ExecutionModel\Exceptions\CompileExpressionException.cs" />
     <Compile Include="ExecutionModel\Activation.cs" />
     <Compile Include="ExecutionModel\Agenda.cs" />
     <Compile Include="ExecutionModel\AlphaNode.cs" />
     <Compile Include="ExecutionModel\ConditionTreeNode.cs" />
-    <Compile Include="ExecutionModel\ConstantJoinNode.cs" />
-    <Compile Include="ExecutionModel\ExecutionModelException.cs" />
+    <Compile Include="ExecutionModel\Exceptions\ExecutionModelException.cs" />
     <Compile Include="ExecutionModel\ConstantNode.cs" />
     <Compile Include="ExecutionModel\MemoryJunction.cs" />
-    <Compile Include="ExecutionModel\MultipleConditionNode.cs" />
-    <Compile Include="ExecutionModel\NodeVisitor.cs" />
     <Compile Include="ExecutionModel\PriorityActionQueue.cs" />
     <Compile Include="ExecutionModel\PriorityQueueAgenda.cs" />
-    <Compile Include="ExecutionModel\ProductionNode.cs" />
     <Compile Include="ExecutionModel\RightActivation.cs" />
     <Compile Include="ExecutionModel\SuccessorSet.cs" />
     <Compile Include="RulesEngineException.cs" />
-    <Compile Include="ExecutionModel\SelectManyNode.cs" />
-    <Compile Include="ExecutionModel\SingleInputNodeWithSuccessors.cs" />
-    <Compile Include="ExecutionModel\SingleInputTreeNode.cs" />
-    <Compile Include="ExecutionModel\ConsequenceNode.cs" />
+    <Compile Include="ExecutionModel\MatchTypeNode.cs" />
     <Compile Include="ExecutionModel\Engine.cs" />
-    <Compile Include="ExecutionModel\JoinNode.cs" />
     <Compile Include="ExecutionModel\Node.cs" />
-    <Compile Include="ExecutionModel\NodeCollection.cs" />
-    <Compile Include="ExecutionModel\NodeType.cs" />
     <Compile Include="ExecutionModel\ConditionNode.cs" />
-    <Compile Include="ExecutionModel\SingleInputNode.cs" />
     <Compile Include="ExecutionModel\StatefulSession.cs" />
     <Compile Include="ExecutionModel\StatefulSessionImpl.cs" />
-    <Compile Include="ExecutionModel\Token.cs" />
     <Compile Include="ExecutionModel\Tuple.cs" />
-    <Compile Include="ExecutionModel\TupleSource.cs" />
     <Compile Include="ExecutionModel\WorkingMemoryElement.cs" />
     <Compile Include="ExecutionModel\SessionWorkingMemoryElement.cs" />
     <Compile Include="ExecutionModel\WorkingMemoryElementList.cs" />
