--- a/src/Magnum.RulesEngine.Visualizers/Magnum.RulesEngine.Visualizers.csproj
+++ b/src/Magnum.RulesEngine.Visualizers/Magnum.RulesEngine.Visualizers.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{41E2299B-973B-462D-AA77-D6C1DDA0332D}</ProjectGuid>
+    <ProjectGuid>{DB58A632-0D01-475E-9C20-A5457653887A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Magnum.RulesEngine.Specs</RootNamespace>
-    <AssemblyName>Magnum.RulesEngine.Specs</AssemblyName>
+    <RootNamespace>Magnum.RulesEngine.Visualizers</RootNamespace>
+    <AssemblyName>Magnum.RulesEngine.Visualizers</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,66 +31,48 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.GLEE, Version=1.2.0.0, Culture=neutral, PublicKeyToken=7f84f738e1fc245c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\NUnit\nunit.framework.dll</HintPath>
+      <HintPath>..\..\lib\Glee\Microsoft.GLEE.dll</HintPath>
     </Reference>
-    <Reference Include="Rhino.Mocks, Version=3.5.0.2, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.GLEE.Drawing, Version=1.2.0.0, Culture=neutral, PublicKeyToken=8a3d7c21d5fa1306, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\Rhino.Mocks.dll</HintPath>
+      <HintPath>..\..\lib\Glee\Microsoft.GLEE.Drawing.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.GLEE.GraphViewerGDI, Version=1.2.0.0, Culture=neutral, PublicKeyToken=fffc27ea4058b3a1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\Glee\Microsoft.GLEE.GraphViewerGDI.dll</HintPath>
+    </Reference>
+    <Reference Include="QuickGraph, Version=3.3.40824.0, Culture=neutral, PublicKeyToken=f3fb40175eec2af3, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\QuickGraph\QuickGraph.dll</HintPath>
+    </Reference>
+    <Reference Include="QuickGraph.Glee, Version=3.3.40824.0, Culture=neutral, PublicKeyToken=f3fb40175eec2af3, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\QuickGraph\QuickGraph.Glee.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Agenda Specs\Agenda_Specs.cs" />
-    <Compile Include="Agenda Specs\BetaMemory_Specs.cs" />
-    <Compile Include="Agenda Specs\ContextAgenda_Specs.cs" />
-    <Compile Include="Conditions\CustomerIsPreferred.cs" />
-    <Compile Include="Consequences\LogOrderDetails.cs" />
-    <Compile Include="EnuemrableItems_Specs.cs" />
-    <Compile Include="Events\OrderSubmitted.cs" />
-    <Compile Include="ExecutionModelTest\Engine_Specs.cs" />
-    <Compile Include="ExecutionModelTest\JoinTree_Specs.cs" />
-    <Compile Include="ExecutionModelTest\ProcessingAnEvent_Specs.cs" />
-    <Compile Include="ExecutionModelTest\SingleInputNode_Specs.cs" />
-    <Compile Include="Expression_Specs.cs" />
-    <Compile Include="Graphing\Graphing_Specs.cs" />
-    <Compile Include="Model\Customer.cs" />
-    <Compile Include="Consequences\HoldOrderForApproval.cs" />
-    <Compile Include="Model\Order.cs" />
-    <Compile Include="Conditions\OrderAmountIsOverLimit.cs" />
-    <Compile Include="Model\OrderLine.cs" />
+    <Compile Include="GraphNodeVisitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="When_creating_a_condition.cs" />
-    <Compile Include="When_declaring_a_rule.cs" />
-    <Compile Include="Commands\SubmitOrder.cs" />
-    <Compile Include="When_executing_a_rule_against_working_memory.cs" />
+    <Compile Include="NodeVertex.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Magnum.RulesEngine.Visualizers\Magnum.RulesEngine.Visualizers.csproj">
-      <Project>{DB58A632-0D01-475E-9C20-A5457653887A}</Project>
-      <Name>Magnum.RulesEngine.Visualizers</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Magnum.RulesEngine\Magnum.RulesEngine.csproj">
       <Project>{0A39AEF0-BBF8-4183-8D8E-A9DEED8A43F3}</Project>
       <Name>Magnum.RulesEngine</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Magnum.TestFramework\Magnum.TestFramework.csproj">
-      <Project>{D741FD13-08D7-4A71-916E-0D61816D8A80}</Project>
-      <Name>Magnum.TestFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\Magnum\Magnum.csproj">
       <Project>{C3650C32-0850-48B4-BE71-ECE9FACBD356}</Project>
       <Name>Magnum</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="SemanticModelTest\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
