Rename festival on the rules engine

--- a/src/Magnum.RulesEngine/Magnum.RulesEngine.csproj
+++ b/src/Magnum.RulesEngine/Magnum.RulesEngine.csproj
@@ -48,33 +48,34 @@
     <Compile Include="DSL\Rule.cs" />
     <Compile Include="DSL\RuleConfigurator.cs" />
     <Compile Include="ExecutionModel\DeclarationCompiler.cs" />
-    <Compile Include="ExecutionModel\ModelVisitorSite.cs" />
-    <Compile Include="ModelVisitor.cs" />
+    <Compile Include="ExecutionModel\FindConditionVisitor.cs" />
+    <Compile Include="ExecutionModel\RulesEngine.cs" />
+    <Compile Include="NodeVisitor.cs" />
     <Compile Include="ExecutionModel\ActionNode.cs" />
     <Compile Include="ExecutionModel\BetaMemory.cs" />
     <Compile Include="ExecutionModel\Exceptions\CompileExpressionException.cs" />
     <Compile Include="ExecutionModel\Activation.cs" />
     <Compile Include="ExecutionModel\Agenda.cs" />
     <Compile Include="ExecutionModel\AlphaNode.cs" />
-    <Compile Include="ExecutionModel\ConditionTreeNode.cs" />
+    <Compile Include="ExecutionModel\TypeNode.cs" />
     <Compile Include="ExecutionModel\Exceptions\ExecutionModelException.cs" />
     <Compile Include="ExecutionModel\ConstantNode.cs" />
-    <Compile Include="ExecutionModel\MemoryJunction.cs" />
-    <Compile Include="ExecutionModel\PriorityActionQueue.cs" />
+    <Compile Include="ExecutionModel\JoinNode.cs" />
+    <Compile Include="ExecutionModel\PriorityQueue.cs" />
     <Compile Include="ExecutionModel\PriorityQueueAgenda.cs" />
     <Compile Include="ExecutionModel\RightActivation.cs" />
     <Compile Include="ExecutionModel\SuccessorSet.cs" />
     <Compile Include="RulesEngineException.cs" />
-    <Compile Include="ExecutionModel\MatchTypeNode.cs" />
-    <Compile Include="ExecutionModel\Engine.cs" />
+    <Compile Include="ExecutionModel\TypeDispatchNode.cs" />
+    <Compile Include="ExecutionModel\MagnumRulesEngine.cs" />
     <Compile Include="ExecutionModel\Node.cs" />
     <Compile Include="ExecutionModel\ConditionNode.cs" />
     <Compile Include="ExecutionModel\StatefulSession.cs" />
     <Compile Include="ExecutionModel\StatefulSessionImpl.cs" />
     <Compile Include="ExecutionModel\Tuple.cs" />
-    <Compile Include="ExecutionModel\WorkingMemoryElement.cs" />
-    <Compile Include="ExecutionModel\SessionWorkingMemoryElement.cs" />
-    <Compile Include="ExecutionModel\WorkingMemoryElementList.cs" />
+    <Compile Include="ExecutionModel\SessionElement.cs" />
+    <Compile Include="ExecutionModel\SessionElementImpl.cs" />
+    <Compile Include="ExecutionModel\SessionElementSet.cs" />
     <Compile Include="RuleSet.cs" />
     <Compile Include="HashSetWorkingMemory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
